# pensol

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: format.yml
examples/: 8bead_1bond.json  crambin.json
src/: CMakeLists.txt  box.h  cells.h  config.cc  config.h  event.h  hardspheres.cc  hardspheres.h  hardspheres_test.cc  main.cc  params.h  snapshot.cc  snapshot.h  solvent.cc  solvent.h  system.h  vec3.h  writer.h
tools/: calc_diff.py  get_error_s_bias.py  init_json.py  krate_hybridmc.py  krate_solvent.py  matrix_element.py  mfpt.py  msd.py  plot_msd.py  plot_vacf.py  rate_ratios.py  run.py  run_diff_eps.py  run_krate_hybridmc.py  run_krate_solvent.py  run_vacf_or_msd.py  update_json.py  vacf.py
